--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tailwind test </title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="./dist/output.css">
 </head>
 <body>
 
@@ -290,7 +290,7 @@
 </div>
     
 </footer>
-<script src="main.js"></script>
-<script src="navbar.js"></script>
+<script src="./dist/main.js"></script>
+<script src="./dist/navbar.js"></script>
 </body>
 </html>  
