margin top for hero sectiom

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <!-- hero section -->
-<section id="hero" class="mt-8">
+<section id="hero" class="mt-16 md:mt-8">
 <div class="container flex flex-col-reverse items-center px-5 mx-auto mb-36 space-y-0 md:flex-row">
     <div class="container flex flex-col items-center space-y-8 md:items-start">
     <h1 class="max-w-md text-4xl pt-7 font-bold text-center md:text-5xl md:text-left">Bring everyone together to build better products</h1>
