--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
 
 <!-- hero section -->
-<section id="hero" class="mt-16 md:mt-20">
-<div class="container flex flex-col-reverse items-center px-5 mx-auto mb-36 space-y-0 md:flex-row">
+<section id="hero" class="mt-0">
+<div class="container flex flex-col-reverse items-center px-5 mx-auto mb-36 space-y-0 mt-32 md:flex-row md:mt-0">
     <div class="container flex flex-col items-center space-y-8 md:items-start">
     <h1 class="max-w-md text-4xl pt-7 font-bold text-center md:text-5xl md:text-left">Bring everyone together to build better products</h1>
 <p class="max-w-xs text-center text-darkGrayishBlue md:text-left">Manage makes it easy for software teams to plan day-to-day tasks while keepping the larger team goals in view.</p>
 <div class="flex items-center justify-center md:justify-start"><a href="#" class=" px-6 py-3 text-white bg-brightRebrightRed rounded-full hover:bg-brightRedLight max-w-fit md:block">Get Started</a></div>
 </div>
 <!-- image-hero -->
-<div class="md:w-3/4">
+<div class=" md:w-3/4">
     <img src="../images/illustration-intro.svg" alt="">
 </div>
 </div>
